apps/gonic/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gonic
  namespace: default
spec:
  parentRefs:
    - name: private
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - gonic.fruitiex.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gonic
          port: 4747
